    PATH on Solaris.

  - Add $PKGCHK and $PKGINFO variables for use on Solaris when searching
    for the SunPRO C++ compiler.  Make the default value for $PKGCHK
    be /usr/sbin/pgkchk (since /usr/sbin isn't usually on the external
    execution $PATH).

  - Fix a man page example of overriding variables when calling
    SharedLibrary() to also set the $LIBSUFFIXES variable.

  From Chen Lee:

  - Handle Visual Studio project and solution files in Unicode.

  From Wayne Lee:

  - Avoid "maximum recursion limit" errors when removing $(-$) pairs
    from long command lines.

  From Clive Levinson:

  - Make ParseConfig() recognize and add -mno-cygwin to $LINKFLAGS and
    $CCFLAGS, and -mwindows to $LINKFLAGS.

  From Sanjoy Mahajan:

  - Correct TeX-related command lines to just $SOURCE, not $SOURCES

  - Fix a bad use of Copy() in an example in the man page, and a
    bad regular expression example in the man page and User's Guide.

  From Shannon Mann:

  - Have the Visual Studio project file(s) echo "Starting SCons" before
    executing SCons, mainly to work around a quote-stripping bug in
    (some versions of?) the Windows cmd command executor.

  From Michael McCracken:

  - Add a new "applelink" tool to handle the things like Frameworks and
    bundles that Apple has added to gcc for linking.

  - Use more appropriate default search lists of linkers, compilers and
    and other tools for the 'darwin' platform.

  - Add a LoadableModule Builder that builds a bundle on Mac OS X (Darwin)
    and a shared library on other systems.

  - Improve SWIG tests for use on Mac OS X (Darwin).

  From Patrick Mezard:

  - Execute build commands for a command-line target if any of the
    files built along with the target is out of date or non-existent,
    not just if the command-line target itself is out of date.

  - Fix the -n option when used with -c to print all of the targets
    that will be removed for a multi-target Builder call.
